--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,11 @@
 ---
 layout: default
 ---
-<div id="post">
+<section id="post">
   <h2><a href="{{ page.url }}">
     {{ page.title }}
   </a></h2>
-  <div id="date">published {{ page.date | date_to_string }}</div>
+  <section id="date">published {{ page.date | date_to_string }}</section>
   {{ content }}
   <hr />
-</div>
+</section>
