--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,11 +31,11 @@
 			</header>
 
 		<!-- Main -->
-			<div id="main">
+			<section id="main">
 		
 				{{ content }}
 
-			</div>
+			</section>
 			
 		<!-- Footer -->
 			<footer id="footer">
