--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,20 +11,20 @@
 	<meta name="description" content="" />
 	<meta name="author" content="Mike Judd" />
 	<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-	<script src="js/jquery.min.js"></script>
-	<script src="js/jquery.poptrox.min.js"></script>
-	<script src="js/skel.min.js"></script>
-	<script src="js/init.js"></script>
-	<link rel="stylesheet" href="css/skel.css" />
-	<link rel="stylesheet" href="css/style.css" />
-	<link rel="stylesheet" href="css/style-xlarge.css" />
+	<script src="http://mcjudd.github.io/js/jquery.min.js"></script>
+	<script src="http://mcjudd.github.io/js/jquery.poptrox.min.js"></script>
+	<script src="http://mcjudd.github.io/js/skel.min.js"></script>
+	<script src="http://mcjudd.github.io/js/init.js"></script>
+	<link rel="stylesheet" href="http://mcjudd.github.io/css/skel.css" />
+	<link rel="stylesheet" href="http://mcjudd.github.io/css/style.css" />
+	<link rel="stylesheet" href="http://mcjudd.github.io/css/style-xlarge.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 </head>
 <body id="top">
 
 		<!-- Header -->
 			<header id="header">
-				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+				<a href="#" class="image avatar"><img src="http://mcjudd.github.io/images/avatar.jpg" alt="" /></a>
 				<h1><strong>mcjudd</strong> // homepage</h1> 	
 			</header>
 
