--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,11 +29,11 @@
 			</header>
 
 		<!-- Main -->
-			<section id="main">
+			<div id="main">
 		
 				{{ content }}
 
-			</section>
+			</div>
 			
 		<!-- Footer -->
 			<footer id="footer">
