--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,10 @@
 					<li><a href="mailto:mjudd23@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>Design: <a href="http://html5up.net">HTML5 UP</a> | 
+						Host: <a href='http://github.com/' target='_blank'>GitHub</a> |
+						Engine: <a href='http://jekyllrb.com/'>Jekyll</a>
+					</li>
 				</ul>
 			</footer>
 
